--- a/src/components/CardsContainer/CardsContainer.css
+++ b/src/components/CardsContainer/CardsContainer.css
@@ -1,3 +1,24 @@
 .logged-in {
     background: none;
 }
+
+.page-body {
+  width: 90%;
+  height: fit-content;
+  min-height: 80vh;
+  background-color: rgba(204, 204, 204, 0.15);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1em;
+}
+
+.card-container {
+  width: 90%;
+  height: fit-content;
+  min-height: 80vh;
+}
+
+h2 {
+  margin-top: .5em;
+}
