--- a/src/components/CardsContainer/CardsContainer.css
+++ b/src/components/CardsContainer/CardsContainer.css
@@ -14,6 +14,9 @@
 }
 
 .card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   width: 90%;
   height: fit-content;
   min-height: 80vh;
@@ -21,4 +24,5 @@
 
 h2 {
   margin-top: .5em;
+  margin-bottom: .5em;
 }
