--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,20 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Domine", serif;
+}
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
   min-height: 90vh;
+}
+
+h1 {
+  padding: 0.2em;
 }
