--- a/src/components/CardsContainer/CardsContainer.css
+++ b/src/components/CardsContainer/CardsContainer.css
@@ -30,7 +30,7 @@ h2 {
 .listings-card-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  margin: 0;
+  margin-top: 2em;
   background: #ffffff;
   color: black;
   text-align: center;
