Adjust styles on area card

--- a/src/components/Area/Area.css
+++ b/src/components/Area/Area.css
@@ -4,9 +4,11 @@ article {
   justify-content: space-between;
   align-items: center;
   width: 40%;
-  height: 15em;
+  height: auto;
   border: 1px solid black;
   padding: 1em;
+  margin: 1em 1em 0 0;
+  background-size: cover;
 }
 
 .view-listings-button-container {
@@ -38,11 +40,17 @@ article {
   color: white;
 }
 
-h3 {
+.area-title {
   font-size: 2em;
   margin: 0;
 }
 
-h4 {
-  margin: 0;
+.area-subtitle {
+  margin: 0 0 1em 0;
+}
+
+.card-background {
+  object-fit: cover;
+  height: 100%;
+  background-size: relative;
 }
