--- a/src/components/CardsContainer/CardsContainer.css
+++ b/src/components/CardsContainer/CardsContainer.css
@@ -16,24 +16,13 @@
 .areas-card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  width: 90%;
+  width: 70%;
   height: fit-content;
   min-height: 80vh;
+  justify-content: center;
 }
 
 h2 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
-}
-
-.listings-card-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  margin-top: 2em;
-  background: #ffffff;
-  color: black;
-  text-align: center;
-  /* background: lightgray; */
-  width: 80%;
 }
