--- a/src/components/Listing/Listing.css
+++ b/src/components/Listing/Listing.css
@@ -51,4 +51,7 @@ img {
   text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
   cursor: pointer;
+  width: 5em;
+  padding: 0.5em 1em;
+  text-decoration: none;
 }
