--- a/src/components/ListingsContainer/ListingsContainer.css
+++ b/src/components/ListingsContainer/ListingsContainer.css
@@ -16,3 +16,11 @@
 .listings-header {
   margin: 1em auto;
 }
+
+.no-favorites {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 10em;
+}
