--- a/src/components/MapContainer/MapContainer.css
+++ b/src/components/MapContainer/MapContainer.css
@@ -1,3 +1,58 @@
-.infobox {
-  width: 10em;
+* {
+  box-sizing: border-box;
+}
+
+h3 {
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+.card {
+  top: 30;
+  position: relative;
+  border: 1px solid black;
+  width: 20em;
+  height: 10em;
+}
+
+.property-title {
+  height: auto;
+  background: gray;
+  padding: 1em;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+}
+
+.listings-page-img {
+  width: 100%;
+  object-fit: cover;
+  height: 15em;
+  vertical-align: bottom;
+}
+
+/* button {
+  position: absolute;
+  left: 5em;
+  bottom: 3em;
+} */
+
+.image-btn {
+}
+
+.listings-btn {
+  position: absolute;
+  bottom: 1em;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background: #ce2828;
+  color: white;
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+  cursor: pointer;
+  width: 5em;
+  padding: 0.5em 1em;
+  text-decoration: none;
 }
