--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,36 +3,88 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 91vh;
-  background: url(../../assets/denver-background.jpg) no-repeat center center
-    fixed;
+  height: 100vh;
+
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 1em;
+}
+
+.form-container {
+  width: 35%;
+}
+
+.img-container {
+  width: 65%;
+  height: 100%;
+}
+
+.login-header {
+  font-family: "Open Sans", sans-serif;
+  font-size: 3em;
+  margin: 0;
+}
+
+.marker {
+  height: 100%;
+  margin-top: 0.5em;
+}
+
+.logo-container {
+  height: 3em;
+  display: flex;
+}
+
+.hero-img {
+  object-fit: cover;
+  /* object-position: right top; */
+  width: 100%;
+  height: 100%;
+}
+
 form {
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 40%;
-  height: 25em;
-  background-color: rgba(204, 204, 204, 0.4);
+  height: 20em;
+  margin-bottom: 5em;
+  font-family: "Open Sans", sans-serif;
+}
+
+.inputs-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  align-self: stretch;
 }
 
 input {
-  width: 85%;
-  height: 1.5em;
-  font-size: 1.5em;
+  width: 60%;
+  height: 2.5em;
+  font-size: 1em;
+  padding: 1em 0.5em;
+  outline: none;
 }
 
 select {
-  width: 70%;
+  width: 60%;
   height: 3em;
   font-size: 1em;
+  border: none;
+  outline: none;
+}
+
+.name-input {
+  margin-bottom: 0.5em;
 }
 
 .input-and-label {
@@ -59,7 +111,6 @@ button {
   background-color: white;
   color: black;
   text-decoration: none;
-  font-family: Domine;
 }
 
 .login-button {
@@ -68,24 +119,25 @@ button {
   align-items: center;
   width: 100%;
   height: 3em;
-  border: 1px solid black;
   font-size: 1em;
-  background-color: white;
-  color: black;
+  border: none;
+  background-color: #00eac3;
+  color: white;
   text-decoration: none;
-  font-family: Domine;
+  text-transform: uppercase;
+  outline: none;
+  cursor: pointer;
 }
 
-.login-button:hover {
+/* .login-button:hover {
   background-color: green;
   color: white;
-}
+} */
 
-button:hover {
+/* button:hover {
   background-color: green;
   color: white;
-}
-
+} */
 
 h2 {
   width: fit-content;
@@ -97,4 +149,21 @@ h2 {
   width: fit-content;
   height: fit-content;
   color: red;
+  position: relative;
+  top: 0.2em;
+  /* padding-top: 0.2em; */
+}
+
+.slogan {
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.8em;
+  text-transform: lowercase;
+  width: 100%;
+  margin: 1em auto;
+  text-align: center;
+  color: gray;
+  line-height: 1.1;
+  margin-left: 1em;
+  /* padding: 0 2em; */
 }
