Style cards container

--- a/src/components/CardsContainer/CardsContainer.css
+++ b/src/components/CardsContainer/CardsContainer.css
@@ -15,9 +15,9 @@
 
 .areas-card-container {
   display: flex;
-  flex-wrap: wrap;
-  width: 80%;
-  height: fit-content;
+  /* flex-wrap: wrap; */
+  width: 90%;
+  /* height: fit-content; */
   min-height: 80vh;
   justify-content: center;
   margin: 0 auto;
