Change heart colors

--- a/src/components/Listing/Listing.css
+++ b/src/components/Listing/Listing.css
@@ -92,12 +92,12 @@ h3 {
 }
 
 .highlighted .listings-btn {
-  background: #e4ee14;
+  /* background: #e4ee14; */
   color: black;
 }
 
 .highlighted .listing-heart-container {
-  background: #e4ee14;
+  /* background: #e4ee14; */
   color: black;
 }
 
